--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ body{
 }
 
 body::-webkit-scrollbar {
-  /* width: 0.5em; */
-  width: 0;
+  width: 0.5em;
+  /* width: 0; */
 }
 
 body::-webkit-scrollbar-track {
